# vs-vaapi-driver

./: .clang-format  .clangd  CMakeLists.txt  COPYING  README.md
docs/: apis.md  notes.md  pseudo_code_of_vaapi.md
libcsi_hal/examples/vdec/: vdec_demo1.c
libcsi_hal/include/csi_hal_vcodec/common/: list.h
libcsi_hal/include/csi_hal_vcodec/hal/: csi_audio_ai.h  csi_camera.h  csi_camera_frame.h  csi_vcodec_common.h  csi_vdec.h  csi_venc.h  csi_venc_h264.h  csi_venc_h265.h  csi_venc_mjpeg.h  csi_venc_property.h
src/: OWNERS  buffer.cc  buffer.h  config.cc  config.h  context.cc  context.h  context_delegate.h  driver.cc  driver.h  drv_video.cc  fake_gbm.cc  fake_gbm.h  h264_decoder_delegate.cc  h264_decoder_delegate.h  image.cc  image.h  no_op_context_delegate.cc  no_op_context_delegate.h  object_tracker.h  scoped_bo_mapping_factory.cc  scoped_bo_mapping_factory.h  surface.cc  surface.h
src/base/: byte_conversions.h  logging.h  lru_cache.h  ptr_util.h  scoped_fd.cc  scoped_fd.h
